samples/_failures_safe/1761212874_ce3463_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_319bf970.c: In function ‘main’:
./samples/SAFE/__tmp_319bf970.c:144:5: error: expected declaration or statement at end of input
  144 |     };
      |     ^
